grammar.js
    source_file: ($) =>
      seq(optional($.shebang), optional(repeat($._statement))),

    _statement: ($) =>
      seq(
        choice(
          $.mod,
          $.use,
          $.comment,
          $.struct_declaration,
          $.enum_declaration,
          $.union_declaration,
          $.protocol_declaration,
          $.type_alias_declaration,
          $.implementation_declaration,
          $.function_declaration,
          $._expression,
        ),
        optional(";"),
      ),

    identifier: (_) => prec(PREC.IDENTIFIER, /[_a-z][_a-z\d]*/),
    type_identifier_name: (_) => prec(PREC.IDENTIFIER, /[A-Z]\w*/),
    function_type_identifier_name: (_) =>
      prec(PREC.IDENTIFIER, /[_a-z][_a-z\d]*/),

    access_modifier: (_) => "pub",

    struct_declaration: ($) =>
      prec.left(
        PREC.DEFAULT,
        seq(
          optional($.access_modifier),
          "struct",
          field("identifier", $.type_identifier),
          optional(field("where_clauses", $.where_clauses)),
          choice(
            seq(
              "{",
              optional(field("embedded_structs", $.embedded_structs)),
              optional(field("fields", $.struct_fields)),
              "}",
            ),
            ";",
          ),
        ),
      ),

    struct_fields: ($) =>
      prec.left(
        PREC.FIELD,
        seq(sepTrailing1(",", $.struct_field), comments($)),
      ),

    struct_field: ($) =>
      prec.right(
        PREC.FIELD,
        seq(
          comments($),
          optional($.access_modifier),
          field("field_name", $.identifier),
          field("field_type", afterColon($.type_annotation)),
        ),
      ),

    enum_declaration: ($) =>
      prec.right(
        PREC.DEFAULT,
        seq(
          optional($.access_modifier),
          "enum",
          field("identifier", $.type_identifier),
          optional(field("where_clauses", $.where_clauses)),
          choice(
            seq("{", optional(field("members", $.enum_members)), "}"),
            ";",
          ),
        ),
      ),

    enum_members: ($) =>
      prec.left(
        PREC.FIELD,
        seq(sepTrailing1(",", choice($.enum_member)), comments($)),
      ),

    enum_member: ($) =>
      seq(comments($), choice($.struct_field, $.enum_variant)),

    enum_variant: ($) =>
      choice(
        seq(
          optional("struct"),
          field("variant_name", $.type_identifier_name),
          optional(
            seq(
              "{",
              optional(field("embedded_structs", $.embedded_structs)),
              optional(field("fields", $.struct_fields)),
              "}",
            ),
          ),
        ),
        seq(
          "enum",
          field("variant_name", $.type_identifier_name),
          choice(
            seq("{", optional(field("members", $.enum_members)), "}"),
            ";",
          ),
        ),
      ),

    protocol_declaration: ($) =>
      seq(
        optional($.access_modifier),
        "proto",
        field("name", $.type_identifier),
        optional(field("where_clauses", $.where_clauses)),
        choice(
          seq(
            "{",
            repeat(choice($.associated_type, $.function_declaration)),
            "}",
          ),
          ";",
        ),
      ),

    implementation_declaration: ($) =>
      prec.right(
        PREC.DEFAULT,
        seq(
          "imp",
          optional($.generic_type_parameters),
          field("protocol_name", $.type_identifier),
          "for",
          field("type_name", $.type_identifier),
          optional(field("where_clauses", $.where_clauses)),
          choice(
            seq(
              "{",
              repeat(choice($.associated_type, $.function_declaration)),
              "}",
            ),
            ";",
          ),
        ),
      ),

    function_declaration: ($) =>
      seq(
        optional($.access_modifier),
        "fun",
        field("identifier", $.function_type_identifier),
        "(",
        optional(field("params", $.parameters)),
        ")",
        optional(field("return_type", afterColon($.type_annotation))),
        optional(field("where_clauses", $.where_clauses)),
        choice(fatArrowOrBlock($, "body"), ";"),
      ),

    type_identifier: ($) =>
      prec.right(
        PREC.IDENTIFIER,
        seq(
          field("name", $.type_identifier_name),
          optional(field("generics", $.generic_type_parameters)),
        ),
      ),

    function_type_identifier: ($) =>
      prec.right(
        PREC.IDENTIFIER,
        seq(
          field("name", $.function_type_identifier_name),
          optional(field("generics", $.generic_type_parameters)),
        ),
      ),

    generic_type_parameters: ($) =>
      prec(
        PREC.DEFAULT,
        seq("<", type_parameters($, $.generic_identifier), ">"),
      ),

    parameters: ($) => sepTrailing1(",", $.parameter),

    parameter: ($) =>
      choice(
        seq(
          field("param_name", $.identifier),
          field("param_type", afterColon($.type_annotation)),
        ),
        seq(
          field("param_name", $.identifier),
          field(
            "param_spread_type",
            afterColon(seq("..", "[", $.type_annotation, "]")),
          ),
        ),
      ),

    where_clauses: ($) => seq("where", sepTrailing1(",", $.where_clause)),

    where_clause: ($) =>
      seq(
        choice(field("type_name", $.generic_identifier), "imp"),
        ":",
        sep1("and", field("protocol_name", $.type_annotation)),
      ),

    type_annotation: ($) =>
      prec.left(
        PREC.DEFAULT,
        choice(
          "Void",
          "Unit",
          "Bool",
          "Int",
          "UInt",
          "Float",
          "Rune",
          "String",
          seq("[", field("array_type", $.type_annotation), "]"),
          seq("(", sepTrailing1(",", $.type_annotation), ")"),
          seq(
            "fun",
            "(",
            sepTrailing(",", "param_types", $.type_annotation),
            ")",
            optional(afterColon(field("return_type", $.type_annotation))),
          ),
          choice($.concrete_type_annotation, $.qualified_type_annotation),
        ),
      ),

    concrete_type_annotation: ($) =>
      prec.left(
        choice(
          seq(
            field("type_name", $.type_identifier_name),
            optional($.concrete_type_parameters),
          ),
          seq(
            field("enum_name", $.type_identifier_name),
            optional($.concrete_type_parameters),
            "::",
            field("enum_variant", $.type_identifier_name),
          ),
        ),
      ),

    _expression: ($) =>
      prec.left(
        PREC.EXPRESSION,
        choice(
          $.range,
          $.loop,
          $.while,
          $.for,
          $.block,
          $.assignment,
          $.compound_assignment,
          $.binary,
          $.variable_declaration,
          $.if,
          $.unary,
          $.propagation,
          $.closure,
          $.match,
          $.trailing_closure,
          $.call,
          $.member,
          $.type_constructor,
          $.static_member_function,
          $.literal,
          $.tuple,
          $.collection,
          $.identifier,
          $.break,
          $.continue,
          $.return,
        ),
      ),

    for: ($) =>
      prec.left(
        PREC.CONDITIONAL,
        seq(
          "for",
          field("pattern", $.pattern),
          "in",
          field("iterable", $._expression),
          fatArrowOrBlock($, "body"),
          optional(seq("else", fatArrowOrBlock($, "else_expr"))),
        ),
      ),

    binary: ($) => {
      const table = [
        ["+", PREC.ADD],
        ["-", PREC.ADD],
        ["*", PREC.MULTIPLY],
        ["/", PREC.MULTIPLY],
        ["%", PREC.MULTIPLY],
        ["||", PREC.LOGICAL_OR],
        ["&&", PREC.LOGICAL_AND],
        ["|", PREC.BITWISE_OR],
        ["^", PREC.BITWISE_XOR],
        ["&", PREC.BITWISE_AND],
        ["==", PREC.EQUAL],
        ["!=", PREC.EQUAL],
        [">", PREC.RELATIONAL],
        [">=", PREC.RELATIONAL],
        ["<=", PREC.RELATIONAL],
        ["<", PREC.RELATIONAL],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
      ];

      return choice(
        ...table.map(([operator, precedence]) => {
          return prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          );
        }),
      );
    },

    variable_declaration: ($) =>
      prec.left(
        PREC.DECLARATION,
        seq(
          "let",
          optional("mut"),
          field("pattern", $.pattern),
          optional(field("type", afterColon($.type_annotation))),
          "=",
          field("initializer", $._expression),
        ),
      ),

    trailing_closure: ($) =>
      prec.left(
        PREC.TRAILING_CLOSURE,
        seq(
          field("function", $._expression),
          "->",
          optional(seq("|", field("params", $.closure_parameters), "|")),
          optional(field("return_type", afterColon($.type_annotation))),
          fatArrowOrBlock($, "body"),
        ),
      ),

    closure: ($) =>
      prec.left(
        PREC.CLOSURE,
        seq(
          "|",
          optional(field("params", $.closure_parameters)),
          "|",
          optional(field("return_type", afterColon($.type_annotation))),
          fatArrowOrBlock($, "body"),
        ),
      ),

    closure_parameters: ($) =>
      prec.left(PREC.CLOSURE, sepTrailing1(",", $.closure_parameter)),

    closure_parameter: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(field("param_type", afterColon($.type_annotation))),
      ),

    pattern: ($) =>
      prec.left(
        PREC.DEFAULT,
        choice(
          $.constructor,
          $.collection_pattern,
          $.tuple_pattern,
          $.binding_pattern,
          $.string,
          $.rune,
          $.float,
          $.uint,
          $.int,
          $.bool,
          $.unit,
          $.rest,
          $.wildcard,
          $.range_pattern,
        ),
      ),

    binding_pattern: ($) =>
      seq(prec(PREC.MATCH, /[_a-z][_a-z\d]*/), optional(seq("@", $.pattern))),

    constructor_fields: ($) =>
      prec.left(
        PREC.MATCH,
        seq("{", sepTrailing(",", "fields", $.constructor_field), "}"),
      ),

    constructor_field: ($) =>
      prec.left(
        PREC.MATCH,
        seq(
          optional(comments($)),
          choice(
            field("field_pattern", $.identifier),
            seq(
              field("field_name", $.identifier),
              field("field_pattern", afterColon($.pattern)),
            ),
          ),
        ),
      ),

    tuple_pattern: ($) =>
      prec.left(100, seq("(", sepTrailing1(",", $.pattern), ")")),

    call: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("callee", $._expression),
          "(",
          optional(field("args", $.arguments)),
          ")",
        ),
      ),

    arguments: ($) => sepTrailing1(",", $.argument),

    argument: ($) => $._expression,

    type_constructor: ($) =>
      prec.right(
        PREC.LITERAL,
        seq(
          field("type_name", $.type_annotation),
          optional(seq("::", field("member_type_name", $.type_annotation))),
          "{",
          optional(field("fields", $.fields)),
          "}",
        ),
      ),

    enum_literal: ($) =>
      prec.right(
        PREC.LITERAL,
        seq(
          field("enum_name", $.type_annotation),
          "::",
          field("enum_variant_name", $.type_identifier_name),
          "{",
          optional(field("fields", $.fields)),
          "}",
        ),
      ),

    static_member_function: ($) =>
      prec.right(
        PREC.FIELD,
        seq(
          field("type", $.type_identifier),
          "::",
          field("function", $.function_type_identifier),
        ),
      ),

    literal: ($) =>
      prec(
        PREC.LITERAL,
        choice($.unit, $.bool, $.int, $.uint, $.float, $.rune, $.string),
      ),

    int: (_) =>
      choice(
        token(/\d+d?/),
        seq(choice("0b", "0o", "0d", "0x"), token(/\d+d?/)),
      ),

    string: ($) =>
      seq('"', repeat(choice($.string_content, $.escape_sequence)), '"'),

    fields: ($) => sepTrailing1(",", $.field),

    field: ($) =>
      seq(
        field("field_name", $.identifier),
        field("field_initializer", afterColon($._expression)),
      ),

    string_content: (_) => token.immediate(prec(1, /[^"\\\n]+/)),
